--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,29 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         applicationId "com.yutaohou.phonkit"
-        minSdkVersion 20
-        targetSdkVersion 20
+        minSdkVersion 14
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
-    }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 }
 
 dependencies {
     compile 'com.github.theDazzler:droidicon:0.1.4@aar'
-    compile "com.android.support:support-v13:20.+"
-    compile "com.android.support:appcompat-v7:20.+"
+    compile "com.android.support:support-v13:21.+"
+    compile "com.android.support:appcompat-v7:21.+"
     compile "com.android.support:recyclerview-v7:+"
+    compile "com.android.support:cardview-v7:21.+"
 
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
